--- a/public/index.html
+++ b/public/index.html
@@ -106,35 +106,35 @@
             <div class="languages-grid">
                 <div class="language-card">
                     <div class="language-flag">
-                        <img src="images/flags/english.svg" alt="영어 국기">
+                        <span class="flag-emoji">🇬🇧</span>
                     </div>
                     <h3>영어</h3>
                     <p>비즈니스, 여행, 일상 생활에 필요한 영어 회화와 문법을 학습해보세요.</p>
                 </div>
                 <div class="language-card">
                     <div class="language-flag">
-                        <img src="images/flags/japanese.svg" alt="일본어 국기">
+                        <span class="flag-emoji">🇯🇵</span>
                     </div>
                     <h3>일본어</h3>
                     <p>일본 문화와 비즈니스에 활용할 수 있는 일본어 능력을 키워보세요.</p>
                 </div>
                 <div class="language-card">
                     <div class="language-flag">
-                        <img src="images/flags/chinese.svg" alt="중국어 국기">
+                        <span class="flag-emoji">🇨🇳</span>
                     </div>
                     <h3>중국어</h3>
                     <p>세계에서 가장 많이 사용되는 언어인 중국어를 효과적으로 학습해보세요.</p>
                 </div>
                 <div class="language-card">
                     <div class="language-flag">
-                        <img src="images/flags/spanish.svg" alt="스페인어 국기">
+                        <span class="flag-emoji">🇪🇸</span>
                     </div>
                     <h3>스페인어</h3>
                     <p>라틴 아메리카와 스페인에서 사용되는 스페인어를 배워보세요.</p>
                 </div>
                 <div class="language-card">
                     <div class="language-flag">
-                        <img src="images/flags/french.svg" alt="프랑스어 국기">
+                        <span class="flag-emoji">🇫🇷</span>
                     </div>
                     <h3>프랑스어</h3>
                     <p>우아한 프랑스어를 배우고 프랑스 문화에 대해 알아보세요.</p>
@@ -291,7 +291,7 @@
             <div class="footer-grid">
                 <div class="footer-info">
                     <div class="footer-logo">
-                        <img src="images/langup-logo-white.svg" alt="LangUp.ai 로고">
+                        <img src="images/logo192.png" width="64" height="64" alt="LangUp.ai 로고">
                     </div>
                     <p>AI 기술을 활용한 개인 맞춤형 언어 학습 플랫폼</p>
                     <div class="social-links">
